--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests
-streamlit
-openai
-pinecone-client
+streamlit==1.31.0
+requests==2.31.0
+openai==1.12.0
+pinecone-client==3.0.2
+python-dotenv==1.0.0
